--- a/sources/sass/_arkanoid-fonts.scss
+++ b/sources/sass/_arkanoid-fonts.scss
@@ -1,13 +1,13 @@
 @font-face {
 	font-family: 'Arkanoid';
-	src: url('/assets/fonts/arkanoid.ttf') format('truetype');
+	src: url('/assets/fonts/Arkanoid.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'ArkanoidSolid';
-	src: url('/assets/fonts/arkanoid-solid.ttf') format('truetype');
+	src: url('/assets/fonts/Arkanoid-solid.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
