--- a/sources/sass/editor.scss
+++ b/sources/sass/editor.scss
@@ -1,5 +1,118 @@
+$palette-border-color: lighten(#0d1b28, 25%);
+$brick-colors: (
+	"gray":   hsl(0, 0%, 62%),
+	"gold":   hsl(58, 65%, 43%),
+	"white":  hsl(0, 0%, 95%),
+	"orange": hsl(35, 78%, 52%),
+	"cyan":   hsl(181, 98%, 79%),
+	"green":  hsl(93, 99%, 60%),
+	"red":    hsl(7, 79%, 47%),
+	"blue":   hsl(230, 96%, 64%),
+	"purple": hsl(292, 97%, 54%),
+	"yellow": hsl(61, 100%, 62%)
+);
+
+@mixin bricksBgColor {
+	@each $name, $value in $brick-colors {
+		&[for="#{$name}"] {
+			background-color: $value;
+		}
+	}
+}
+
+#palette {
+	float: left;
+	border: 4px solid $palette-border-color;
+	color: white;
+	margin: 0 auto;
+	width: 80px;
+	text-align: center;
+	ul {
+		list-style-type: none;
+		margin: 4px auto;
+		padding: 0;
+		li {
+			display: inline-block;
+			height: 24px;
+			width: 32px;
+		}
+	}
+	#bricks {
+		li {
+			margin: 0;
+			input[type="radio"]:not(:checked),
+			input[type="radio"]:checked {
+				position: absolute;
+				left: -9999px;
+			}
+			input[type="radio"]:not(:checked) + label,
+			input[type="radio"]:checked + label {
+				position: relative;
+				cursor: pointer;
+				display: block;
+				height: 100%;
+				width: 100%;
+				@include bricksBgColor;
+			}
+			input[type="radio"]:checked + label {
+				border: 2px solid $palette-border-color;
+				box-sizing: border-box;
+			}
+		}
+	}
+	#modes {
+		li {
+			border: 1px solid $palette-border-color;
+			box-sizing: border-box;
+			input[type="radio"]:not(:checked),
+			input[type="radio"]:checked {
+				position: absolute;
+				left: -9999px;
+			}
+			input[type="radio"]:not(:checked) + label,
+			input[type="radio"]:checked + label {
+				position: relative;
+				cursor: pointer;
+				display: block;
+				width: 100%;
+				height: 100%;
+				&::before {
+					font-family: FontAwesome;
+				}
+				&[for="add"]::before {
+					content: '\f040';
+				}
+				&[for="remove"]::before {
+					content: '\f12d';
+				}
+			}
+			input[type="radio"]:checked + label {
+				background-color: $palette-border-color;
+			}
+		}
+	}
+	#actions {
+		li {
+			width: 68px;
+			button {
+				border: 1px solid $palette-border-color;
+				background-color: transparent;
+				color: white;
+				font-family: FontAwesome;
+				font-size: 16px;
+				width: 100%;
+				height: 100%;
+				padding: 0;
+				margin: 0;
+				cursor: pointer;
+			}
+		}
+	}
+}
+
 #screen {
 	display: block;
 	border: 4px solid lighten(#0d1b28, 25%);
 	margin: 0 auto;
+	cursor: crosshair;
 }
