--- a/sources/sass/editor.scss
+++ b/sources/sass/editor.scss
@@ -122,4 +122,7 @@ $brick-colors: (
 	border: 4px solid lighten(#0d1b28, 25%);
 	margin: 0 auto;
 	cursor: crosshair;
+	&[data-overlap="true"] {
+		cursor: not-allowed;
+	}
 }
