--- a/sources/sass/editor.scss
+++ b/sources/sass/editor.scss
@@ -100,18 +100,24 @@ $brick-colors: (
 	}
 	#actions {
 		li {
-			width: 68px;
 			button {
-				border: 1px solid $palette-border-color;
 				background-color: transparent;
+				border: 1px solid $palette-border-color;
+				box-sizing: border-box;
 				color: white;
+				cursor: pointer;
 				font-family: FontAwesome;
 				font-size: 16px;
+				margin: 0;
+				padding: 0;
 				width: 100%;
 				height: 100%;
-				padding: 0;
-				margin: 0;
-				cursor: pointer;
+				&[data-action="export"]::before {
+					content: '\f019';
+				}
+				&[data-action="import"]::before {
+					content: '\f093';
+				}
 			}
 		}
 	}
