Enhance Vaus life drawing

--- a/sources/sass/style.scss
+++ b/sources/sass/style.scss
@@ -32,10 +32,10 @@ h3 {
 	margin: 0 auto;
 	width: 448px;
 	.life {
-		background-color: gray;
 		display: inline-block;
-		margin: 8px;
-		height: 16px;
-		width: 24px;
+		height: 14px;
+		width: 42px;
+		margin-left: 16px;
+		margin-top: 8px;
 	}
 }
