--- a/sources/sass/_settings.scss
+++ b/sources/sass/_settings.scss
@@ -7,6 +7,11 @@ $h3-color: #bb2727;
 
 $font-family: sans-serif;
 
+$score-font-family: 'Press Start 2P', cursive;
+$score-fg-color: inherit;
+$score-font-size: 18pt;
+$score-margin: 9pt;
+
 $overlay-bg-color: rgba(0, 0, 0, 0.666);
 $overlay-z-index: 1;
 
