Update changelog template

--- a/sources/html/changelog/index.hbs
+++ b/sources/html/changelog/index.hbs
@@ -5,7 +5,7 @@
 		<title>Arkanoid</title>
 		<link rel="stylesheet" href="/assets/css/style.css" charset="utf-8">
 		<link rel="stylesheet" href="/assets/css/changelog.css" charset="utf-8">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P">
 	</head>
 	<body>
 	{{{contents}}}
@@ -14,7 +14,7 @@
 		<div class="release" data-date="{{this.metadata.date}}">
 			<header>
 				<h2>{{{this.metadata.title}}}</h2>
-				<i class="fa fa-calendar"></i>&nbsp;<small>{{{this.metadata.date}}}</small>
+				<small>{{{this.metadata.date}}}</small>
 			</header>
 			{{> (lookup . 'partial')}}
 		</div>
