--- a/sources/sass/style.scss
+++ b/sources/sass/style.scss
@@ -46,10 +46,10 @@ h3 {
 	#lifes {
 		list-style-type: none;
 		margin: 0;
+		margin-top: 4px;
 		padding: 0;
 		.life {
 			display: inline-block;
-			width: 36px;
 			&:not(:last-child) {
 				margin-right: 8px;
 			}
