--- a/sources/sass/sound.scss
+++ b/sources/sass/sound.scss
@@ -1,13 +1,10 @@
 body {
-  background-color: #05001F;
+  background-color: #141311;
 }
 
-.ui-panel {
-  -webkit-user-select: none;
-     -khtml-user-select: none;
-     -moz-user-select: -moz-none;
-     -o-user-select: none;
-     user-select: none;
+.inline-controls {
+  display: flex;
+  justify-content: space-between;
 }
 
 .knob {
