--- a/sources/sass/style.scss
+++ b/sources/sass/style.scss
@@ -31,7 +31,7 @@ h3 {
 #content-wrapper {
 	position: relative;
 	margin: 0 auto;
-	width: 448px;
+	width: 600px;;
 	#screen {
 		display: block;
 		margin: 0;
